# finbrain-python

./: CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: async_example.py  transactions_plotting_example.py
src/finbrain/: __init__.py  _version.py  client.py  exceptions.py  plotting.py
src/finbrain/aio/: client.py
src/finbrain/aio/endpoints/: _utils.py  analyst_ratings.py  app_ratings.py  available.py  corporate_lobbying.py  government_contracts.py  house_trades.py  insider_transactions.py  linkedin_data.py  news.py  options.py  patent_filings.py  predictions.py  recent.py  reddit_mentions.py  screener.py  sentiments.py
src/finbrain/endpoints/: _utils.py  analyst_ratings.py  app_ratings.py  available.py  corporate_lobbying.py  government_contracts.py  house_trades.py  insider_transactions.py  linkedin_data.py  news.py  options.py  patent_filings.py  predictions.py  recent.py  reddit_mentions.py  screener.py  senate_trades.py  sentiments.py
tests/: conftest.py  test_analyst_ratings.py  test_app_ratings.py  test_async_client.py  test_available.py  test_client.py  test_corporate_lobbying.py  test_envelope.py  test_government_contracts.py  test_house_trades.py  test_insider_transactions.py  test_integration.py  test_linkedin_data.py  test_news.py  test_options.py  test_patent_filings.py  test_plotting.py  test_predictions.py  test_recent.py  test_reddit_mentions.py  test_screener.py  test_senate_trades.py  test_sentiments.py  test_utils.py
