[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=8",
    "wheel"
    ]
build-backend = "setuptools.build_meta"

[project]
name            = "finbrain-python"
dynamic         = ["version"]
description     = "Official Python client for the FinBrain API"
readme          = "README.md"
license         = "MIT"
authors         = [{name = "Ahmet Salim Bilgin", email="ahmet@finbrain.tech"}]
requires-python = ">=3.9"
dependencies    = [
    "requests>=2.31",
    "typer[all]>=0.12",
    "pandas>=2.2",
    "plotly>=6.0",
    "numpy>=1.22.4",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"   # defaults are fine; this is optional

# ensure the marker is included in the wheel/sdist
[tool.setuptools.package-data]
finbrain = ["py.typed"]

[project.optional-dependencies]
async = [
    "httpx>=0.24",               # async HTTP client
]
dev = [
    "pytest",
    "pytest-asyncio",            # async test support
    "responses",                 # HTTP mocking (sync)
    "httpx>=0.24",               # for async tests
    "build",
    "twine",
    "ruff",                      # linter/formatter (optional)
    "mypy",                      # static type checker (validates py.typed surface)
    "types-requests",            # stubs for requests (mypy import-untyped otherwise)
]

[tool.pytest.ini_options]
markers = [
    "integration: hits the real FinBrain v2 API (requires FINBRAIN_API_KEY)",
]

[tool.mypy]
# Code targets >=3.9 but uses `from __future__ import annotations` throughout,
# so checking against 3.10 (mypy's minimum target) is equivalent here.
python_version = "3.10"
files = ["src/finbrain"]
ignore_missing_imports = true   # third-party libs (pandas, plotly, …) ship no stubs here
